Fix iterating over controls backwards